traces/bug_389.txt
src/bamglib/Mesh2.cpp:377: error: DEAD_STORE
  The value written to &cas (type int) is never used.
Showing all 1 steps of the trace


src/bamglib/Mesh2.cpp:377:3: Write of unused value
375.     double dd2 =  imax;// infinity
376.     TriangleAdjacent er; 
377.     int  cas=-2;
         ^
378.     for (int j=0;j<3;j++)
379.       { 
